Changes log for Test-JSON-Meta
==============================

        - documentation updates.
        - consistent abstract.
        - extended META test suite.
        - fixed license fields in META.json to be lists.

0.12    2013-04-07
        - change file dates changed to meet W3CDTF standards.
        - reworked Makefile.PL for clarity.
        - updated test suite.
        - added repositories to Meta files.

0.11    2011-02-14
        - removed tests which are no longer applicable.

0.10    2011-02-13
        - Distribution name change: Test-JSON-Meta => Test-CPAN-Meta-JSON.
        - This distribution now a wrapper around Test-CPAN-Meta-JSON.

0.09    2010-07-15
        - simplified spec def error message (backported from CPAN-Meta).
        - simplified spec using "value = \&anything", thus providing better
          structure (backported from CPAN-Meta).
        - made keyword validation a little more strict.

0.08    2010-07-14
        - added missing tests and samples.
        - Test::More version downgraded to 0.62.
        - JSON version upgraded to 2.15.

0.07    2010-04-20
        - added spec definition validation.
        - updated distribution META.json to version 2.

0.06    2010-04-20
        - upgraded code to CPAN-Meta-Spec version 2.
        - default version (if not specified) to check is now version 2.
        - split spec version testing into individual test files.
        - added tests and samples for version 2 testing.

0.05    2010-04-12
        - fixed qr// delimiters due to issues with the NOT SIGN symbol 
          (suggested by Ricardo Signes & David Golden).

0.04    2009-12-18
        - renamed word() to keyword().
        - added identifier() validation.
        - changed optional_features key from a keyword to an identifier type,
          thus further clarifying RT#52685 (thanks Kevin).

0.03    2009-12-12
        - clarified spec defined and user defined keys, as promoted by Kevin
          Ryde in RT#52685 (thanks Kevin).
