@@ -5,6 +5,7 @@ Changes log for Test-JSON-Meta
         - consistent abstract.
         - extended META test suite.
         - fixed license fields in META.json to be lists.
+        - added WARNING notice.
 
 0.12    2013-04-07
         - change file dates changed to meet W3CDTF standards.
